--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.1"
+    "next": "14.1.1",
+    "underscore": "1.13.6"
   },
   "devDependencies": {
     "typescript": "^5",
