--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.1.1",
-    "underscore": "1.13.6"
+    "underscore": "1.13.6",
+    "@dnd-kit/core": "6.1.0",
+    "@dnd-kit/utilities": "3.2.2",
+    "@dnd-kit/sortable": "8.0.0"
   },
   "devDependencies": {
     "typescript": "^5",
